fix: use same default jvm args as broker